--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -15,7 +15,7 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/scalastyle">View on GitHub</a>
+          <a id="forkme_banner" href="https://github.com/nVotesOrg">View on GitHub</a>
 
           <h1 id="project_title">{{ page.title }}</h1>
 
