--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
     <title>{{page.title}}</title>
+    <p>Maintained by <a href="https://nvotes.com">nVotes</a></p>
   </head>
 
   <body>
