--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -18,6 +18,7 @@
           <a id="forkme_banner" href="https://github.com/nVotesOrg">View on GitHub</a>
 
           <h1 id="project_title">{{ page.title }}</h1>
+          <p>Maintained by <a href="https://nvotes.com">nVotes</a></p>
 
         </header>
     </div>
