--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -274,6 +274,10 @@ Full-Width Styles
   padding: 50px 10px 30px 10px;
 }
 
+#header_wrap .inner p, #header_wrap .inner p > a {
+  color: white;
+}
+
 #project_title {
   margin: 0;
   color: #fff;
